feat: clipboard create and read
